--- a/custom.css
+++ b/custom.css
@@ -59,15 +59,201 @@ body footer .wp-block-social-links.is-style-logos-only .wp-social-link svg {
     color: #E3E3E3;
 }
 
-h1, h2, h3, .title {
+h1, h2, h3, .title, footer .footer-list li, .wp-block-navigation__responsive-container.is-menu-open .wp-block-navigation__responsive-container-content .wp-block-navigation-item  {
     font-family: 'Playfair Display';
 }
 
 h4, h5, h6,
 .wp-block-navigation .wp-block-navigation-item__content.wp-block-navigation-item__content,
-.taxonomy-category.wp-block-post-terms.apbExcerpt, body a[rel="category tag"] {
+.taxonomy-category.wp-block-post-terms.apbExcerpt, body a[rel="category tag"],
+.wp-block-button .wp-block-button__link,
+.wp-block-button.is-style-outline-white .wp-block-button__link {
     font-family: 'Avenir'; 
 }
+
+header .wp-block-image img {
+    width: 814px;
+}
+
+.wp-block-button.is-style-outline-white .wp-block-button__link {
+    font-weight: 400;
+}
+
+footer .wp-block-group.alignfull {
+    background-color: #000000 !important;
+}
+
+footer .footer-list,.wp-block-navigation__responsive-container.is-menu-open .wp-block-navigation__responsive-container-content {
+    list-style-type: none;
+    counter-reset: custom-counter;
+    padding-left: 0;
+  }
+
+  .wp-block-navigation__responsive-container.is-menu-open .wp-block-navigation__responsive-container-content {
+    gap: 24px !important;
+  }
+  
+footer .footer-list li {
+    position: relative;
+    padding-left: 98px;
+    margin-bottom: 20px;
+    font-size: 56px; /* Adjust the font-size of the list item as needed */
+  }
+
+  .wp-block-navigation__responsive-container.is-menu-open .wp-block-navigation__responsive-container-content .wp-block-navigation-item {
+    position: relative;
+    padding-left: 60px;
+    margin-bottom: 20px;
+    font-size: 33px; /* Adjust the font-size of the list item as needed */
+  }
+  
+footer .footer-list li:before {
+    content: counter(custom-counter, decimal-leading-zero);
+    counter-increment: custom-counter;
+    position: absolute;
+    left: 0;
+    bottom: 20px;
+    border-bottom: 1px solid #504E51;
+    padding: 5px 10px;
+    font-size: 18px; /* Set the font-size of the marker to 16px */
+    color: #A9A9A9;
+    font-family: 'Avenir'; 
+    font-weight: 400;
+    letter-spacing: 1.8px;
+}
+
+.wp-block-navigation__responsive-container.is-menu-open .wp-block-navigation__responsive-container-content .wp-block-navigation-item::before {
+    content: counter(custom-counter, decimal-leading-zero);
+    counter-increment: custom-counter;
+    position: absolute;
+    left: 0;
+    bottom: 13px;
+    border-bottom: 1px solid #504E51;
+    padding: 5px 10px;
+    font-size: 18px; /* Set the font-size of the marker to 16px */
+    color: #A9A9A9;
+    font-family: 'Avenir'; 
+    font-weight: 400;
+    letter-spacing: 1.8px;
+}
+
+.wp-block-navigation__responsive-container.is-menu-open .wp-block-navigation__responsive-container-content .wp-block-navigation-item span {
+    font-size: 33px; /* Adjust the font-size of the list item as needed */
+    color: #504E51;
+}
+  
+footer .gf_browser_chrome.gform_wrapper {
+    margin-top: 24px;
+    width: 66%;
+    margin-left: auto;
+}
+
+.footer-column h3 {
+    width: 66%;
+    margin-left: auto;
+}
+
+footer .gform_wrapper.gravity-theme .gfield_label {
+    color:#E3E3E3;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+}
+
+footer .gform_wrapper.gravity-theme .gfield input.large {
+    border: 1px solid #9C9C9C;
+    background: #000;
+    padding: 17px 24px;
+    height: 64px;
+    max-width: 428px;
+}
+
+footer .gform_wrapper.gravity-theme .gfield input.large::placeholder {
+    color:  #A9A9A9;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+}
+
+.gfield_required.gfield_required_text, footer .gfield_required {
+    display: none !important;
+}
+
+footer .gform_wrapper.gravity-theme input[type="submit"] {
+    border: 1px solid #504E51;
+    background: #FFF;
+    padding: 23px 21px;
+    color:#0F3548;
+    font-size: 18px;
+    font-family: 'Avenir';
+    font-style: normal;
+    font-weight: 400;
+    line-height: 100%;
+    letter-spacing: 1.8px;
+    text-transform: uppercase;
+}
+
+.footer-column {
+    position: relative;
+}
+
+.bottom-line {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+}
+
+body .wp-block-button .wp-block-button__link {
+    text-transform: uppercase;
+    font-weight: 200;
+    padding-top: 23px;
+    padding-right: 31px;
+    padding-bottom: 23px;
+    padding-left: 31px;
+    line-height: 100%;
+}
+
+.home .site-header {
+    position: relative;
+    margin-bottom: 50px;
+}
+
+header .wp-block-columns.are-vertically-aligned-center .wp-block-column:first-child {
+    flex-basis: 37.33% !important;
+}
+header .wp-block-columns.are-vertically-aligned-center .wp-block-column:first-child .wp-block-navigation ul {
+gap: 64px;
+}
+header .wp-block-columns.are-vertically-aligned-center .wp-block-column:nth-child(2) {
+    flex-basis: 21.33% !important;
+}
+header .wp-block-columns.are-vertically-aligned-center .wp-block-column:last-child {
+    flex-basis: 37.33% !important;
+}
+
+header .wp-block-columns.are-vertically-aligned-center .wp-block-column:last-child .wp-block-navigation ul {
+    gap: 48px;
+ }
+
+.home .wp-block-site-logo img {
+    /* width: 812px; */
+    display: none;
+}
+
+header .wp-block-social-links.has-icon-color.is-style-logos-only.is-layout-flex {
+    gap: 12px !important;
+}
+/* 
+.home .custom-logo-link {
+    position: absolute;
+    top: 30px;
+    z-index: 9999;
+    left: 50%;
+    transform: translateX(-50%);
+} */
+
 
 .taxonomy-category.wp-block-post-terms {
     font-weight: 400;
@@ -108,27 +294,35 @@ h5 {
 }
 
 
-h3, blockquote {
+h3 {
+    font-size: 32px;
+    font-weight: 400 !important;
+    line-height: 40px !important;
+    letter-spacing: -0.03em;
+}
+
+blockquote {
     font-size: 32px;
     font-weight: 400;
     line-height: 40px;
-    letter-spacing: -0.03em;
 }
+
 
 
 h2 {
     font-size: 48px !important;
     font-weight: 400;
-    line-height: 60px;
-    letter-spacing: -0.03em !important;
+    line-height: 125%;
+    letter-spacing: -1.44px !important;
 }
 
 
 h1 {
-    font-size: 56px;
-    font-weight: 400;
-    line-height: 67px;
-    letter-spacing: -0.03em;
+    font-size: 56px !important;
+    line-height: 120% !important;
+    font-weight: 400 !important;
+    letter-spacing: -1.68px;
+    text-transform: uppercase;
 }
 
 
@@ -137,6 +331,14 @@ h6 {
     font-weight: 400;
     line-height: 11px;
     letter-spacing: 0.1em;
+}
+
+body .max-1144 {
+    max-width: 1144px !important;
+    margin-left: auto !important;
+    margin-right: auto !important;
+    /* padding-left: 15px;
+    padding-right: 15px; */
 }
 
 
@@ -408,3 +610,500 @@ body .blog-tabs .apbGridPosts .apbPost.six .apbTitle, body .blog-tabs .apbGridPo
     line-height: 125% !important;
     letter-spacing: -1.44px !important;
 }
+
+/* homepage */
+
+.wp-site-blocks .alignfull.homepage-cover {
+    max-width: 1280px;
+    margin-left: auto !important;
+    margin-right: auto !important;
+    padding-top: 0 !important;
+    z-index: 999;
+}
+.wp-block-cover.homepage-cover .wp-block-cover__image-background {
+    position: relative;
+    object-position: top;
+}
+
+.wp-block-cover.homepage-cover .wp-block-cover__inner-container .hlogo-header {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, -23%);
+}
+
+.wp-block-cover.homepage-cover .wp-block-cover__inner-container .home-heading {
+    position: absolute;
+    bottom: -236px;
+    left: 50%;
+    transform: translateX(-50%);
+    /* padding-top: 0 !important; */
+}
+
+.wp-block-group.alignwide.home-heading {
+    max-width: 742px;
+    width: 100%;
+    margin-left: auto !important;
+    margin-right: auto !important;
+    padding: 80px;
+}
+
+.wp-block-cover.alignfull.shop-banner {
+    margin-top: -350px;
+    position: relative;
+    z-index: 2;
+    padding-top: 565px;
+}
+
+.wp-block-cover.alignfull.shop-banner {
+    background-image: url('https://homesteadlivingstg.flywheelsites.com/wp-content/uploads/2023/06/Rectangle-4.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    padding-bottom: 80px;
+}
+
+.wp-block-cover.shop-banner .wp-block-cover__image-background {
+    height: auto;
+    display: none;
+}
+
+.wp-block-group.alignwide.shop-top {
+    padding-top: 120px;
+    max-width: 670px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.wp-block-group.shop-section {
+    padding: 526px 20px 0;
+}
+
+
+.wp-block-group.shop-section .home-shop .wc-block-grid__products {
+    display: flex;
+    gap: 40px;
+    margin: 0 !important;
+}
+
+.wp-block-group.shop-section .home-shop.wc-block-grid.has-2-columns .wc-block-grid__product {
+    flex-basis: 552px;
+    margin: 0;
+    border-left: none;
+    border-right: none;
+}
+
+.wp-block-group.shop-section .home-shop.wc-block-grid.has-2-columns .wc-block-grid__product .wc-block-grid__product-image {
+    background-color: #fff;
+    /* padding: 79px 128px; */
+    max-width: 552px;
+    width: 100%;
+    min-height: 552px;
+    max-height: 552px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.wp-block-group.shop-section .home-shop .wc-block-grid__product-title{
+    color:  #FFF;
+    font-size: 32px;
+    font-family: 'Playfair Display';
+    line-height: 125%;
+    letter-spacing: -0.96px;
+    font-weight: 400;
+    text-align: left;
+}
+
+.wp-block-group.shop-section .home-shop .wc-block-grid__product-price {
+    color:  #E3E3E3;
+    font-size: 32px;
+    font-weight: 400;
+    line-height: 150%;
+    text-align: left;
+}
+
+.home-headshop {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
+
+.home-headshop h1 {
+    margin-left: 0 !important;
+    color: #FFF;
+    font-size: 56px;
+    font-family: 'Playfair Display';
+    font-weight: 400;
+    line-height: 120%;
+    letter-spacing: -1.68px;
+    text-transform: uppercase;
+}
+
+.home-headshop p {
+    margin-right: 0 !important;
+    color: #FFF;
+    font-size: 22px;
+    font-family: 'Avenir';
+    line-height: 100%;
+    font-weight: 200;
+    letter-spacing: 2.2px;
+    
+    text-transform: uppercase;
+}
+
+.home-headshop p a {
+    text-decoration: underline;
+    font-weight: 200;
+}
+
+
+/* Responsive Styles */
+
+@media screen and (max-width: 844px) {
+    h2 {
+        font-size: 44px !important;
+    }
+
+    h1 {
+        font-size: 50px !important;
+    }
+
+    .wp-block-navigation__responsive-container-open:not(.always-shown) {
+        display: block !important;
+    }
+    
+    header .wp-block-navigation__container, .home header .column-logo {
+        display: none;
+    }
+
+    .wp-block-navigation__container {
+        align-items: center;
+        justify-content: center;
+    }
+
+    .wp-site-blocks .alignfull.homepage-cover {
+        display: block;
+    }
+    .wp-block-cover.homepage-cover .wp-block-cover__inner-container .home-heading {
+        position: relative;
+        padding: 40px 20px !important;
+        bottom: 0;
+        transform: none;
+        left: 0;
+    }
+
+    .wp-site-blocks .alignfull.homepage-cover {
+        margin-left: 0 !important;
+        margin-right: 0 !important;
+        padding-left: 20px !important;
+        padding-right: 20px !important;
+    }
+
+    .home-headshop.max-1144 {
+        padding-left: 20px !important; 
+        padding-left: 20px !important; 
+    }
+
+    .wp-block-cover.alignfull.shop-banner {
+        /* margin-top: -120px; */
+        padding-top: 260px;
+        margin-bottom: 0 !important;
+    }
+
+    .wp-block-group.alignwide.shop-top h2 {
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+
+    .wp-block-group.alignwide.shop-top p {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    .wp-block-group.alignwide.shop-top {
+        padding-top: 135px;
+    }
+
+    .wp-block-cover.shop-banner .wp-block-cover__image-background {
+        height: 2430px;
+    }
+
+    .wp-block-group.shop-section {
+        padding: 370px 20px 0;
+    }
+
+    /* .wp-block-group.shop-section .home-shop.wc-block-grid.has-2-columns .wc-block-grid__product .wc-block-grid__product-image {
+        padding: 30px 65px;
+    } */
+
+    .wp-block-group.shop-section .home-shop .wc-block-grid__product-title {
+        font-size: 26px;
+        margin: 0 10px 4px;
+        text-align: center;
+    }
+
+    .wp-block-group.shop-section .home-shop .wc-block-grid__product-price {
+        font-size: 26px;
+        text-align: center;
+    }
+
+    .wc-block-grid__products .wc-block-grid__product-image img {
+        width: 255px;
+    }
+
+    .wp-block-group.shop-section .home-shop.wc-block-grid.has-2-columns .wc-block-grid__product .wc-block-grid__product-image {
+        max-width: 350px;
+        min-height: 350px;
+        max-height: 350px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+
+    .wp-block-cover.homepage-cover .wp-block-cover__inner-container .hlogo-header figure {
+        width: 250px;
+    }
+
+    .wp-block-cover.homepage-cover .wp-block-cover__image-background {
+        height: 500px;
+    }
+
+    .wp-block-group.shop-section .home-shop .wc-block-grid__products {
+        display: block;
+    }
+
+    .wp-block-group.shop-section .home-shop.wc-block-grid.has-2-columns .wc-block-grid__product {
+        max-width: 100%;
+    }
+
+    body .max-1144 {
+        padding-left: 0 !important;
+        padding-right: 0 !important;
+    }
+
+    .footer-column h3 {
+        width: 100%;
+    }
+
+    .footer-bottom {
+        gap: 24px !important;
+    }
+
+    .footer-bottom .wp-block-column:first-child {
+        order: 2;
+    }
+    .footer-bottom .column-two {
+        order: 1;
+    }
+
+    .footer-bottom .column-two figure {
+        margin-bottom: 0;
+    }
+
+    .footer-bottom .column-three {
+        order: 3;
+    }
+
+    .footer-bottom .wp-container-44.wp-container-44 {
+        justify-content: center;
+    }
+
+    .top-footer {
+        padding: 0 20px 50px;
+    }
+
+    footer .footer-list li {
+        font-size: 40px !important;
+        padding-left: 70px;
+        margin-left: 0;
+    }
+
+    footer .footer-list li:before {
+        bottom: 13px;
+        font-size: 14px;
+    }
+
+    .bottom-line {
+        position: relative;
+        margin-block-start: 10px !important;
+    }
+
+    .gform_wrapper.gravity-theme input:not([type=radio]):not([type=checkbox]):not([type=image]):not([type=file]) {
+        line-height: 100%;
+    }
+
+    footer .gf_browser_chrome.gform_wrapper {
+        width: 100%;
+    }
+
+    ul.home-articles, .home-headshop {
+        display: block;
+    }
+
+    ul.home-articles {
+        padding: 0 20px;
+    }
+
+    .home-headshop p {
+        text-align: center !important;
+    }
+
+    .home-headshop h1 {
+        text-align: center;
+    }
+
+    ul.home-articles .wp-block-post-featured-image img, ul.home-articles li {
+        width: 360px;
+    }
+
+    ul.home-articles li {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .big-article .wp-block-post-title {
+        font-size: 28px !important;
+        line-height: 35px !important;
+    }
+
+    ul.home-articles li .big-article .wp-block-column.post-text {
+        padding: 24px 38px 24px 24px;
+        background-color: #fff;
+        margin-top: -80px;
+        z-index: 2;
+        position: relative;
+        width: 89%;
+    }
+}
+@media screen and (min-width: 845px) and (max-width: 973px)  {
+
+.home .site-header {
+    margin-bottom: 0;
+}
+
+.wp-block-group.alignwide.shop-top {
+    padding-top: 1175px;
+}
+
+header .wp-block-columns.are-vertically-aligned-center .wp-block-column:last-child {
+    flex-grow: 1;
+}
+
+.wp-block-cover.alignfull.shop-banner {
+    margin-top: -820px;
+    padding-top: 0;
+}
+.wp-block-group.shop-section .home-shop.wc-block-grid.has-2-columns .wc-block-grid__product {
+    flex-basis: 48%;
+}
+
+.wp-block-group.shop-section .home-shop.wc-block-grid.has-2-columns .wc-block-grid__product .wc-block-grid__product-image {
+    min-height: fit-content;
+    max-height: 100%;
+    padding: 15px 0;
+}
+
+.wp-block-group.shop-section {
+    padding: 589px 20px 0;
+}
+
+.wp-block-group.shop-section .home-shop .wc-block-grid__products {
+    gap: 20px;
+}
+
+}
+
+@media screen and (max-width: 973px) {
+    .wp-block-navigation__responsive-container-open:not(.always-shown) {
+        display: block !important;
+    }
+
+    
+    header .wp-block-navigation__container, .home header .column-logo {
+        display: none;
+    }
+
+    .wp-block-navigation__container {
+        align-items: center;
+        justify-content: center;
+    }
+
+    .hide-desktop {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 973px) {
+    .wp-block-navigation .wp-block-navigation-item.hide-desktop {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 845px) and (max-width: 1086px) {
+    .wp-container-7.wp-container-7 {
+        gap: 26px;
+    }
+
+    header .wp-block-columns.are-vertically-aligned-center .wp-block-column:last-child .wp-block-navigation ul {
+        gap: 26px;
+    }
+
+    .wp-block-group.alignwide.home-headshop.max-1144, ul.home-articles {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    footer .gf_browser_chrome.gform_wrapper, .footer-column h3 {
+        width: 100%;
+    }
+
+    footer .footer-list li {
+        font-size: 40px !important;
+        padding-left: 70px;
+        margin-left: 0;
+    }
+
+    footer .footer-list li:before {
+        bottom: 13px;
+        font-size: 14px;
+    }
+}
+
+@media screen and (min-width: 974px) and (max-width: 1200px) {
+    .wp-block-group.shop-section .home-shop.wc-block-grid.has-2-columns .wc-block-grid__product {
+        flex-basis: 48%;
+    }
+    
+    .wp-block-group.shop-section .home-shop.wc-block-grid.has-2-columns .wc-block-grid__product .wc-block-grid__product-image {
+        min-height: fit-content;
+        max-height: 100%;
+        padding: 15px 0;
+    }
+
+    .wp-block-group.alignwide.home-headshop.max-1144, ul.home-articles {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    footer .gf_browser_chrome.gform_wrapper, .footer-column h3 {
+        width: 100%;
+    }
+
+    footer .gform_wrapper.gravity-theme .gfield input.large {
+        max-width: 380px;
+    }
+    
+}
+
+@media (min-width: 600px) and (max-width: 799px) {
+    .wp-block-navigation__responsive-container-open:not(.always-shown) {
+        display: block !important;
+    }
+
+    header .wp-block-navigation__responsive-container-content,
+    header .wp-block-navigation__container {
+        display: none;
+    }
+}
+
