--- a/custom.css
+++ b/custom.css
@@ -18,8 +18,8 @@
 
 @font-face {
     font-family: 'Avenir';
-    src: url('avenirltstd-book-webfont.woff2') format('woff2'),
-         url('avenirltstd-book-webfont.woff') format('woff');
+    src: url('/wp-content/themes/homestead-living/fonts/avenir-webfont.woff2') format('woff2'),
+         url('/wp-content/themes/homestead-living/fonts/avenir-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
@@ -417,6 +417,83 @@ ul.home-articles li:not(:first-child) .wp-block-column.post-text {
 
 /* Blog page */
 
+.uagb-block-d494d310.uagb-tabs__hstyle2-desktop ul.uagb-tabs__panel {
+    border-top: 1px solid #E3E3E3;
+    border-bottom: 1px solid #E3E3E3;
+    width: 100%;
+}
+
+.uagb-tabs__wrap ul.uagb-tabs__panel li.uagb-tab a {
+    font-family: 'Avenir';
+    letter-spacing: 1.18px;
+}
+
+.uagb-tabs__wrap ul.uagb-tabs__panel li.uagb-tab a:hover,
+.uagb-tabs__wrap ul.uagb-tabs__panel li.uagb-tab a:focus {
+    text-decoration: none;
+}
+
+.wp-block-ap-block-posts .apbPagination {
+    border-top: 1px solid #E3E3E3;
+    padding-top: 24px;
+    margin-top: 64px;
+}
+
+.wp-block-ap-block-posts .apbPagination li:first-child {
+    color: transparent !important;
+    margin: 0 auto 0 0 !important;
+    border: 1px solid  #504E51;
+    background:  #FFF;
+    padding: 23px 8px 23px 18px!important;
+    font-size: 2px !important;
+}
+
+.wp-block-ap-block-posts .apbPagination .apbPageNumber.disabled {
+    display: block !important;
+    pointer-events: none;
+    opacity: 0.6;
+    border: 1px solid rgba(80,78,81, .6);
+}
+
+.wp-block-ap-block-posts .apbPagination .apbPageNumber.apbActivePage {
+    text-decoration: underline;
+}
+
+.wp-block-ap-block-posts .apbPagination .apbPageNumber {
+    color:#0F3548;
+    font-size: 18px;
+    font-family: 'Avenir';
+    font-style: normal;
+    font-weight: 400;
+    line-height: 100%;
+    letter-spacing: 1.8px;
+    text-transform: uppercase;
+}
+
+.wp-block-ap-block-posts .apbPagination li:first-child::before {
+    content: 'Previous';
+    color: #0F3548 !important;
+    font-size: 18px;
+    font-family: 'Avenir';
+    font-style: normal;
+    font-weight: 400;
+    line-height: 100%;
+    letter-spacing: 1.8px;
+    text-transform: uppercase;
+}
+
+.wp-block-ap-block-posts .apbPagination li:last-child {
+    color: #0F3548 !important;
+    margin: 0 0 0 auto !important;
+    border: 1px solid  #504E51;
+    background:  #FFF;
+    padding: 24px 25px 25px !important;
+}
+
+.wp-block-ap-block-posts .apbPagination li.disabled:last-child {
+    opacity: 0.6;
+}
+
 .featured-article.wp-block-ap-block-posts .apbPost.apbSideImage.grid {
     display: flex;
     flex-wrap: wrap;
@@ -521,6 +598,11 @@ ul.home-articles li:not(:first-child) .wp-block-column.post-text {
 
 .featured-article.wp-block-ap-block-posts .apbPost .apbText .featured-text .apbReadMore {
     order: 3;
+}
+
+.featured-article.wp-block-ap-block-posts .apbPost .apbText .featured-text .apbReadMore a {
+    font-weight: 400 !important;
+    font-family: 'Avenir';
 }
 
 /* .featured-article.wp-block-ap-block-posts .apbPost.apbSideImage.rightImage {
@@ -974,6 +1056,54 @@ body .blog-tabs .apbGridPosts .apbPost.six .apbTitle, body .blog-tabs .apbGridPo
         z-index: 2;
         position: relative;
         width: 89%;
+    }
+
+    body .blog-tabs .apbGridPosts .apbPost .apbText {
+        width: 66%;
+    }
+
+    .featured-article.wp-block-ap-block-posts .apbPost.apbSideImage.grid {
+        flex-direction: column;
+    }
+
+    .featured-article.wp-block-ap-block-posts .apbPost .apbText .featured-text {
+        position: relative;
+        left: 0;
+        transform: none;
+        top: 0;
+    }
+
+    .featured-article.wp-block-ap-block-posts .apbPost.apbSideImage.rightImage .apbThumb {
+        order: 1;
+    }
+
+    .featured-article.wp-block-ap-block-posts .fillContentHeight.apbSideImage .apbText {
+        order: 2;
+    }
+
+    body .blog-tabs .apbGridPosts .apbPost.six .apbTitle,
+    body .blog-tabs .apbPost:nth-child(6) .apbTitle, 
+    body .blog-tabs .apbPost:nth-child(21) .apbTitle, 
+    body .blog-tabs .apbPost:nth-child(36) .apbTitle, 
+    body .blog-tabs .apbPost:nth-child(10) .apbTitle a, 
+    body .blog-tabs .apbPost:nth-child(25) .apbTitle a, 
+    body .blog-tabs .apbPost:nth-child(40) .apbTitle a, 
+    body .blog-tabs .apbPost:nth-child(6) .apbTitle a, 
+    body .blog-tabs .apbPost:nth-child(21) .apbTitle a, 
+    body .blog-tabs .apbPost:nth-child(36) .apbTitle a {
+        font-family: 'Playfair Display', serif;
+        font-weight: 400;
+        font-size: 20px !important;
+        font-style: normal;
+        text-transform: none;
+        text-decoration: auto;
+        line-height: 124% !important;
+        letter-spacing: -0.84px !important;
+    }
+
+    .wp-block-ap-block-posts .apbGridPosts {
+        display: block !important;
+        padding: 0 20px;
     }
 }
 @media screen and (min-width: 845px) and (max-width: 973px)  {
